--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "@calcit/docs-workflow": "^0.0.7",
-    "@calcit/procs": "^0.5.41",
-    "@memkits/azure-speech-util": "^0.0.4"
+    "@calcit/procs": "^0.5.44-a4",
+    "@memkits/azure-speech-util": "^0.0.5"
   },
   "devDependencies": {
     "bottom-tip": "^0.1.3",
@@ -10,7 +10,7 @@
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.5.1",
     "remarkable": "^2.0.1",
-    "vite": "^2.9.8"
+    "vite": "^2.9.9"
   },
   "version": "0.0.1"
 }
