--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@calcit/docs-workflow": "^0.0.7",
-    "@calcit/procs": "^0.5.44-a4",
+    "@calcit/procs": "^0.5.45",
     "@memkits/azure-speech-util": "^0.0.5"
   },
   "devDependencies": {
@@ -10,7 +10,7 @@
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.5.1",
     "remarkable": "^2.0.1",
-    "vite": "^2.9.9"
+    "vite": "^2.9.12"
   },
   "version": "0.0.1"
 }
